--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,52 @@
+asgiref==3.2.3
 autopep8==1.5
+backcall==0.1.0
 beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
+cycler==0.10.0
+decorator==4.4.2
+Django==3.0.2
+Flask==1.1.1
 idna==2.9
+ipykernel==5.1.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipython-sql==0.3.9
+itsdangerous==1.1.0
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.14.1
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+numpy==1.18.1
+pandas==1.0.1
+parso==0.6.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prettytable==0.7.2
+prompt-toolkit==3.0.3
+ptyprocess==0.6.0
 pycodestyle==2.5.0
+Pygments==2.5.2
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+pyzmq==18.1.1
 requests==2.23.0
+scikit-learn==0.22.2
+scipy==1.4.1
+seaborn==0.10.0
+six==1.14.0
 soupsieve==2.0
+SQLAlchemy==1.3.13
+sqlparse==0.3.0
+tornado==6.0.3
+traitlets==4.3.3
 urllib3==1.25.8
+wcwidth==0.1.8
+Werkzeug==1.0.0
